Version 1.5 -Regulus-

* [NEW] Added a phpinfo link to check your php installation in the admin menu.
* [NEW] Now you can make batch uploads of zip files for file galleries. If you have the right permission just
  upload a zip file and all the files will be added to the gallery.
* [NEW] Now you can use comments for inividual blog posts.
* [FIX] Tikilib code reduced splitting it into smaller libraries reducing memory consumption. (stage1)
* [NEW] Added a description field for Wiki pages (optional) when this feature is disabled the description is
  displayed below the page name and as the title of a link to the page (form other pages).
* [NEW] Added direct link to pages in paginations (optional) if enabled you can jump to any page of a multi
  page listing by following a link.  
* [NEW] Newsletters added, admins can setup newsletters and users can subscribe, emails are requiered to confirm
  subscriptions and prevent spamming. Then admin can simply send an HTML based newsletter to the subscribed (and
  confirmed) users. Users can unsubscribe using a URL.
* [NEW] Added an option to generate gzipped output to the browser.
* [NEW] Base templates can now be defined by theme so you can create a theme presenting
  a whole different layout for Tiki. You can also use this to create themes including images
  and other decoration elements in Tiki. Since only base templates are classified by theme
  you can do it changing just a few files. If you don't want to change the layout just copy
  the templates from the templates directory if you are creating a theme.
* [NEW] Changed wiki page names to support up to 150 characters
* [NEW] Menus now preserve their state between pages (using cookies) if cookies are disabled
  then menus wont preserve state but will still work as they did before.
* [NEW] Added plugins to the Wiki, now you can create your own plugins for the wiki to 
  suit your needs. The syntax is simple, see lib/wiki_plugins/example.php for a
  description and example.