@@ -1,0 +1,6 @@
+<?
+include_once("tiki-setup.php");
+
+$smarty->assign('mid','tiki-login.tpl');
+$smarty->display('tiki.tpl');
+?>
